fix icons sizes on mobile

--- a/src/assets/styles/cola.scss
+++ b/src/assets/styles/cola.scss
@@ -115,6 +115,15 @@
       border-radius: 20%;
       cursor: pointer;
 
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0;
+
+      .icon{
+        font-size: 3rem;
+      }
+
       color: #ffffff;
     }
 
