--- a/src/assets/styles/sprite.scss
+++ b/src/assets/styles/sprite.scss
@@ -165,6 +165,10 @@
       border: 3px solid #ffffff;
       border-radius: 20%;
       cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0;
 
       color: #ffffff;
     }
